Modularize data input for async support
Signed-off-by: Sirbu Nicolae-Cezar <sirbunicolaecezar@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,8 @@
     <button id="zoomIn">+</button>
     <button id="zoomOut">-</button>
     <button id="centerGraph">Center Graph</button>
+    <button id="remove-data">remove-data</button>
+    <button id="add-data">add-data</button>
 
     <br/><br/>
 
@@ -56,66 +58,76 @@
       let zoomOut = document.querySelector('#zoomOut');
       let centerGraph = document.querySelector('#centerGraph');
 
+
+      let data = {
+        nodes: [
+          {id: 0, x: 0, y: 375},
+          {id: 1, x: 150, y: 0},
+
+          {id: 2, x: 150, y: 150 },
+          {id: 3, x: 300, y: 150 },
+          {id: 4, x: 450, y: 150 },
+
+          {id: 5, x: 150, y: 300},
+          {id: 6, x: 150, y: 450},
+          {id: 7, x: 150, y: 600},
+          {id: 8, x: 150, y: 750},
+
+          {id: 9, x: 600, y: 150 },
+          {id: 10, x: 750, y: 150 },
+          {id: 11, x: 900, y: 150 },
+          {id: 12, x: 1050, y: 150 },
+          {id: 13, x: 1200, y: 150 },
+          {id: 14, x: 1350, y: 150 },
+          {id: 15, x: 1500, y: 150 }
+        ],
+        links: []
+      };
+
+      data.links = [
+        { from: data.nodes[0], to: data.nodes[1], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[0], to: data.nodes[2], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[0], to: data.nodes[5], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[0], to: data.nodes[6], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[0], to: data.nodes[7], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[0], to: data.nodes[8], connectionFrom: false, connectionTo: true },
+
+        { from: data.nodes[2], to: data.nodes[3], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[3], to: data.nodes[4], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[4], to: data.nodes[9], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[9], to: data.nodes[10], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[10], to: data.nodes[11], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[11], to: data.nodes[12], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[12], to: data.nodes[13], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[13], to: data.nodes[14], connectionFrom: false, connectionTo: true },
+        { from: data.nodes[14], to: data.nodes[15], connectionFrom: false, connectionTo: true }
+      ];
+
       happiGraphInstance.iconsMap = iconsMap;
       happiGraphInstance.propertiesMap = propertiesMap;
-
-      happiGraphInstance.nodes = [
-        {id: 0, x: 0, y: 375},
-        {id: 1, x: 150, y: 0},
-
-        {id: 2, x: 150, y: 150 },
-        {id: 3, x: 300, y: 150 },
-        {id: 4, x: 450, y: 150 },
-
-        {id: 5, x: 150, y: 300},
-        {id: 6, x: 150, y: 450},
-        {id: 7, x: 150, y: 600},
-        {id: 8, x: 150, y: 750},
-
-        {id: 9, x: 600, y: 150 },
-        {id: 10, x: 750, y: 150 },
-        {id: 11, x: 900, y: 150 },
-        {id: 12, x: 1050, y: 150 },
-        {id: 13, x: 1200, y: 150 },
-        {id: 14, x: 1350, y: 150 },
-        {id: 15, x: 1500, y: 150 }
-      ];
-
-      happiGraphInstance.links = [
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[1], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[2], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[5], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[6], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[7], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[8], connectionFrom: false, connectionTo: true },
-
-        { from: happiGraphInstance.nodes[2], to: happiGraphInstance.nodes[3], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[3], to: happiGraphInstance.nodes[4], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[4], to: happiGraphInstance.nodes[9], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[9], to: happiGraphInstance.nodes[10], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[10], to: happiGraphInstance.nodes[11], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[11], to: happiGraphInstance.nodes[12], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[12], to: happiGraphInstance.nodes[13], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[13], to: happiGraphInstance.nodes[14], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance.nodes[14], to: happiGraphInstance.nodes[15], connectionFrom: false, connectionTo: true }
-      ];
+      happiGraphInstance.data = data;
 
       let happiGraphInstance2 = document.querySelector('#happi-graph-two');
+
+      let data2 = {
+        nodes: [
+          {id: 0, x: 0, y: 200},
+          {id: 1, x: 600, y: 0},
+          {id: 2, x: 600, y: 200},
+          {id: 3, x: 600, y: 400},
+        ],
+        links: []
+      };
+
+      data2.links = [
+        { from: data2.nodes[0], to: data2.nodes[1], connectionFrom: false, connectionTo: true },
+        { from: data2.nodes[0], to: data2.nodes[2], connectionFrom: false, connectionTo: true },
+        { from: data2.nodes[0], to: data2.nodes[3], connectionFrom: false, connectionTo: true }
+      ];
+
+      happiGraphInstance2.data = data2;
       happiGraphInstance2.iconsMap = iconsMap;
       happiGraphInstance2.propertiesMap = propertiesMap;
-
-      happiGraphInstance2.nodes = [
-        {id: 0, x: 0, y: 200},
-        {id: 1, x: 600, y: 0},
-        {id: 2, x: 600, y: 200},
-        {id: 3, x: 600, y: 400},
-      ];
-
-      happiGraphInstance2.links = [
-        { from: happiGraphInstance2.nodes[0], to: happiGraphInstance2.nodes[1], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance2.nodes[0], to: happiGraphInstance2.nodes[2], connectionFrom: false, connectionTo: true },
-        { from: happiGraphInstance2.nodes[0], to: happiGraphInstance2.nodes[3], connectionFrom: false, connectionTo: true }
-      ];
 
       zoomIn.addEventListener('click', () => {
         happiGraphInstance.customZoomIn();
@@ -130,6 +142,16 @@
       centerGraph.addEventListener('click', () => {
         happiGraphInstance.centerGraph();
         happiGraphInstance2.centerGraph();
+      });
+
+      document.querySelector('#remove-data').addEventListener('click', () => {
+        happiGraphInstance.removeData();
+        happiGraphInstance2.removeData();
+      });
+
+      document.querySelector('#add-data').addEventListener('click', () => {
+        happiGraphInstance.data = { ...data };
+        happiGraphInstance2.data = { ...data2 };
       });
     </script>
   </body>
