--- a/demo/index.html
+++ b/demo/index.html
@@ -26,9 +26,9 @@
     </style>
   </head>
   <body>
-    <button id="zoomIn">+</button>
-    <button id="zoomOut">-</button>
-    <button id="centerGraph">Center Graph</button>
+    <button id="zoom-in">+</button>
+    <button id="zoom-out">-</button>
+    <button id="center-graph">center-graph</button>
     <button id="remove-data">remove-data</button>
     <button id="add-data">add-data</button>
 
@@ -54,9 +54,9 @@
       };
 
       let happiGraphInstance = document.querySelector('#happi-graph');
-      let zoomIn = document.querySelector('#zoomIn');
-      let zoomOut = document.querySelector('#zoomOut');
-      let centerGraph = document.querySelector('#centerGraph');
+      let zoomIn = document.querySelector('#zoom-in');
+      let zoomOut = document.querySelector('#zoom-out');
+      let centerGraph = document.querySelector('#center-graph');
 
 
       let data = {
