Add style to node header
Signed-off-by: Sirbu Nicolae-Cezar <sirbunicolaecezar@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,8 @@
         --happi-graph-primary-color-rgb: 113, 204, 220;
         --happi-graph-primary-color: rgb(var(--happi-graph-primary-color-rgb));
         --happi-graph-secondary-color: #24272a;
+        --happi-graph-gray-color: #AFAFAF;
+
       }
     </style>
   </head>
