--- a/demo/index.html
+++ b/demo/index.html
@@ -112,9 +112,12 @@
       let happiGraphInstance = document.querySelector('#happi-graph');
       happiGraphInstance.iconsMap = iconsMap;
       happiGraphInstance.propertiesMap = propertiesMap;
-      happiGraphInstance.data = data;
+      happiGraphInstance.data = { ...data };
       happiGraphInstance.addEventListener('happi-graph-on-node-click', ({ detail }) => {
         console.log(detail);
+      });
+      happiGraphInstance.addEventListener('happi-graph-on-cached-graph', ({ id }) => {
+        happiGraphInstance.data = { ...data };
       });
 
       let data2 = {
@@ -142,6 +145,9 @@
       happiGraphInstance2.addEventListener('happi-graph-on-node-click', ({ detail }) => {
         console.log(detail);
       });
+      happiGraphInstance2.addEventListener('happi-graph-on-cached-graph', ({ id }) => {
+        happiGraphInstance2.data = { ...data2 };
+      });
 
       let data3 = {
         graphDirection: 'VERTICAL',
@@ -156,6 +162,9 @@
       happiGraphInstance3.propertiesMap = propertiesMap;
       happiGraphInstance3.addEventListener('happi-graph-on-node-click', ({ detail }) => {
         console.log(detail);
+      });
+      happiGraphInstance3.addEventListener('happi-graph-on-cached-graph', ({ id }) => {
+        happiGraphInstance3.data = { ...data3 };
       });
 
       /* Buttons */
